# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load(
    "//pw_build:pigweed.bzl",
    "pw_cc_library",
)

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

pw_cc_library(
    name = "common",
    hdrs = [
        "public/pw_rpc/nanopb/internal/common.h",
    ],
    include_prefix = "pw_rpc/nanopb/internal",
    includes = ["public"],
    strip_include_prefix = ".",
    deps = [
        "@nanopb",
    ],
)

pw_cc_library(
    name = "server_api",
    srcs = [
        "common.cc",
        "method.cc",
        "server_reader_writer.cc",
    ],
    hdrs = [
        "public/pw_rpc/nanopb/internal/method.h",
        "public/pw_rpc/nanopb/internal/method_union.h",
        "public/pw_rpc/nanopb/server_reader_writer.h",
    ],
    includes = ["public"],
    deps = [
        ":common",
        "//pw_bytes",
        "//pw_rpc",
        "//pw_rpc:internal_packet_pwpb",
        "//pw_rpc/raw:server_api",
    ],
)

pw_cc_library(
    name = "client_api",
    hdrs = ["public/pw_rpc/nanopb/client_reader_writer.h"],
    includes = ["public"],
    deps = [
        "//pw_bytes",
        "//pw_rpc",
        "//pw_rpc:internal_packet_pwpb",
    ],
)

pw_cc_library(
    name = "test_method_context",
    hdrs = [
        "public/pw_rpc/nanopb/fake_channel_output.h",
        "public/pw_rpc/nanopb/test_method_context.h",
    ],
    includes = ["public"],
    deps = [
        ":server_api",
        "//pw_assert",
        "//pw_containers",
        "//pw_rpc:internal_test_utils",
    ],
)
